2010-03-15  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=35502
        [Gtk] Objects of ATK_ROLE_TABLE should not implement AtkText

        Simple change to stop tables from implementing AtkText.

        * accessibility/gtk/AccessibilityObjectAtk.cpp:
        (getInterfaceMaskFromObject):
2010-03-15  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=35502
        [Gtk] Objects of ATK_ROLE_TABLE should not implement AtkText

        New test to be sure we do not accidentally implement AtkText for tables

        * tests/testatk.c
        (testWebkitAtkGetTextInTable):
        (main):

Canonical link: https://commits.webkit.org/47331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56036 268f45cc-cd09-0410-ab3c-d52691b4dbfc